SERVER-6931 Don't attempt to look up a cursor using an invalid id.  Prevents an occasional incorrect warning message.